# icache_sim

./: .gitignore  Cargo.toml  README.md  demo.trace  example1.trace  index.html  out.txt  spec.txt  spec_example.txt
src/: access_trace copy.rs  access_trace.rs  lib.rs  lru.rs  main.rs  simulation.rs  simulatiton.rs  simulatiton_result.rs  trace.rs
traces/: absolute-worst-case.trace  capacity-misses.trace  delete_output.ps1  demo.trace  example1.trace  example2.trace  example3.trace  example4.trace  example5.trace  example6.trace  function-order.trace  function_order.trace  inlining.trace  input-dependant.trace  instruction-size.trace  more-realistic.trace  run_traces.ps1  simple-worst-case.trace  test.trace
web/: .gitignore  index.html  index.ts  package-lock.json  package.json  script.ts  style.css
